# Do_An_Co_So_1

./: .gitignore  Android  PROJECT_UPDATE_NOTES.md  README.md  components.json  docker-compose.yml  eslint.config.mjs  lyrics_feature_patch.diff  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
emotion-music-player/services/api/: alembic.ini  pyproject.toml  requirements.txt  track_payload.json  track_payload_ascii.json  track_payload_test.json
emotion-music-player/services/api/alembic/: env.py
emotion-music-player/services/api/alembic/versions/: 0002_track_emotion_cover.py  0003_add_track_lyrics.py  0003_auth_google_users.py  bc0698f2953d_merge_auth_and_lyrics_heads.py
emotion-music-player/services/api/app/: main.py  main.py.patch
emotion-music-player/services/api/app/core/: config.py  security.py
emotion-music-player/services/api/app/db/: base.py  deps.py  session.py
emotion-music-player/services/api/app/models/: emotion_event.py  interaction.py  payment_order.py  track.py  user.py
emotion-music-player/services/api/app/routers/: auth.py  emotion.py  emotion_detect.py  feedback.py  history.py  likes.py  lyrics_mood.py  payment_orders.py  recommend.py  tracks.py  users.py
emotion-music-player/services/api/app/schemas/: emotion.py  emotion_detection.py  feedback.py  history.py  like.py  lyrics_mood.py  payment_order.py  recommend.py  track.py  user.py
emotion-music-player/services/api/emotion_music_player_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
emotion-music-player/services/api/scripts/: migrate_payment_orders.py
(+187 files in other folders)
