[project]
name = "emotion-music-player-api"
version = "0.1.0"
description = "FastAPI backend for Emotion Music Player"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic-settings>=2.4,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "python-multipart>=0.0.9,<1",
    "requests>=2.32,<3",
    "email-validator>=2.2,<3",
    "librosa>=0.10,<1",
    "mutagen>=1.47,<2",
    "soundfile>=0.12,<1",
    "numpy>=1.26,<2",
    "vaderSentiment>=3.3.2,<4",
]

[tool.uvicorn]
factory = false